Solve overflow

--- a/src/client/Sidebar/styles.css
+++ b/src/client/Sidebar/styles.css
@@ -2,6 +2,7 @@
   height: 100%;
   width: 200px;
   background: rgb(54, 65, 89);
+  overflow: auto;
 }
 
 .vz-sidebar .full-box {
